# a2Bot

./: .gitignore  404.html  CLAUDE.md  PRD.md  README.md  edubot-dashboard.service  edubot-robot.service  index.html  mkdocs.yml  progress.md  sitemap.xml
CC-Session-Logs/: 15-04-2026-11_00-gesture-fullscreen-autostart.md
api/parameters/: index.html
api/topics/: index.html
docs/: faq.md  index.md
docs/api/: parameters.md  topics.md
docs/hardware/: bom.md  overview.md  power.md  wiring.md
docs/lessons/: gesture-control.md  keyboard-teleop.md  lidar.md  navigation.md  overview.md  slam.md
docs/setup/: camera.md  display.md  raspberry-pi.md  ros2-jazzy.md
docs/software/: arduino.md  odometry.md  ros2-control.md  urdf.md
faq/: index.html
hardware/bom/: index.html
hardware/overview/: index.html
hardware/power/: index.html
hardware/wiring/: index.html
lessons/gesture-control/: index.html
lessons/keyboard-teleop/: index.html
lessons/lidar/: index.html
lessons/navigation/: index.html
lessons/overview/: index.html
lessons/slam/: index.html
robot_firmware.ino/: robot_firmware.ino.ino
ros_control_ws/install/: local_setup.sh  setup.sh
ros_control_ws/install/my_robot_hardware_interface/share/my_robot_hardware_interface/: local_setup.sh  package.ps1  package.sh  package.xml
ros_control_ws/install/my_robot_hardware_interface/share/my_robot_hardware_interface/cmake/: ament_cmake_export_targets-extras.cmake  export_my_robot_hardwareExport.cmake
ros_control_ws/src/my_robot_hardware_interface/: CMakeLists.txt  my_robot_hardware_interface.xml
ros_control_ws/src/my_robot_hardware_interface/include/my_robot_hardware_interface/: my_robot_hardware.hpp
ros_control_ws/src/my_robot_hardware_interface/src/: my_robot_hardware.cpp
search/: search_index.json
setup/camera/: index.html
setup/display/: index.html
setup/raspberry-pi/: index.html
setup/ros2-jazzy/: index.html
software/arduino/: index.html
software/odometry/: index.html
software/ros2-control/: index.html
(+38 files in other folders)
