cmake_minimum_required(VERSION 3.8)
project(my_robot_hardware_interface)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(pluginlib REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)

# Shared library (plugin)
add_library(my_robot_hardware SHARED
  src/my_robot_hardware.cpp
)

target_include_directories(my_robot_hardware PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

ament_target_dependencies(my_robot_hardware
  rclcpp
  hardware_interface
  pluginlib
  rclcpp_lifecycle
)

# Export plugin description
pluginlib_export_plugin_description_file(
  hardware_interface my_robot_hardware_interface.xml)

install(TARGETS my_robot_hardware
  EXPORT export_my_robot_hardware
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

install(DIRECTORY include/
  DESTINATION include
)

ament_export_libraries(my_robot_hardware)
ament_export_targets(export_my_robot_hardware)
ament_export_dependencies(
  rclcpp hardware_interface pluginlib rclcpp_lifecycle)

ament_package()