<?xml version="1.0"?>
<package format="3">
  <name>my_robot_hardware_interface</name>
  <version>0.0.1</version>
  <description>Hardware interface for my_robot differential drive</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>